# internal/api/util.go
@@ -1,22 +1,16 @@
 package api
 
 import (
-	"context"
 	"encoding/json"
 	"errors"
 	"fmt"
 	"io"
+	"log"
 	"net/http"
 	"regexp"
 
-	"github.com/humanitec/golib/hlogger"
-	"gopkg.in/DataDog/dd-trace-go.v1/ddtrace/tracer"
-
-	humerr "humanitec.io/go-service-template/internal/errors"
+	herrors "humanitec.io/custom-reference-driver/internal/errors"
 )
-
-// Unauthorized request
-var ErrUnauthorized = errors.New("unauthorized")
 
 var validID = regexp.MustCompile(`^[a-z0-9][a-z0-9-]+[a-z0-9]$`)
 
@@ -24,59 +18,46 @@ func isValidAsID(str string) bool {
 	return validID.MatchString(str)
 }
 
-// getUser extracts user identifier from the HTTP "From" header.
-// Returns ErrUnauthorized if the HTTP "From" header is not set or empty.
-func getUser(r *http.Request) (string, error) {
-	auth := r.Header.Get("from")
-	if auth == "" {
-		return "", ErrUnauthorized
+func getCredentials(driverSecrets map[string]interface{}) (string, string, error) {
+	account, ok := driverSecrets["account"].(map[string]interface{})
+	if !ok {
+		return "", "", errors.New("driver secrets should contain 'account' map")
 	}
-
-	return auth, nil
+	accessKeyId, ok := account["aws_access_key_id"].(string)
+	if !ok {
+		return "", "", errors.New("'account' details should include 'aws_access_key_id'")
+	}
+	secretAccessKey, ok := account["aws_secret_access_key"].(string)
+	if !ok {
+		return "", "", errors.New("'account' details should include 'aws_secret_access_key'")
+	}
+	return accessKeyId, secretAccessKey, nil
 }
 
-// writeAsText Writes the status code and the object (marshaled into a string) into the response.
-func (s *apiServer) writeAsText(_ context.Context, w http.ResponseWriter, statusCode int, data interface{}) {
+// writeAsText Writes the status code and the object (marshled into a string) into the response.
+func writeAsText(w http.ResponseWriter, statusCode int, data interface{}) {
 	dataText := fmt.Sprintf("%+v", data)
 
 	w.Header().Set("Content-Type", "text/plain")
 	w.WriteHeader(statusCode)
-	w.Write([]byte(dataText))
+	_, err := w.Write([]byte(dataText))
+	if err != nil {
+		log.Println(err)
+	}
 }
 
-// writeAsJSON Writes the status code and the object (marshaled into a JSON string) into the response.
-func (s *apiServer) writeAsJSON(ctx context.Context, w http.ResponseWriter, statusCode int, obj interface{}) {
-	dataJSON, err := json.Marshal(obj)
+// writeAsJSON writes the supplied object to a response along with the status code.
+func writeAsJSON(w http.ResponseWriter, statusCode int, obj interface{}) {
+	jsonObj, err := json.Marshal(obj)
 	if err != nil {
-		details := hlogger.LogDetails(ctx, "err", err.Error())
-
-		s.logger.Logger.Sugar().Errorw("failed marshalling json", details...)
-		w.WriteHeader(http.StatusInternalServerError)
+		log.Println(err)
+		w.WriteHeader(500)
 		return
 	}
 
-	w.Header().Set("Content-Type", "application/json")
+	w.Header().Add("Content-Type", "application/json")
 	w.WriteHeader(statusCode)
-	w.Write(dataJSON)
-}
-
-// writeError sends the error message as an HTTP Response
-func (s *apiServer) writeError(ctx context.Context, w http.ResponseWriter, httpStatusCode int, message string, err error) {
-	if httpStatusCode <= 0 {
-		httpStatusCode = http.StatusInternalServerError
-	}
-
-	var humanitecErr *humerr.HumanitecError
-	if !errors.As(err, &humanitecErr) {
-		humanitecErr = humerr.New("API-001", message, nil, err)
-	}
-
-	span, _ := tracer.StartSpanFromContext(ctx, "writeError")
-	span.Finish(tracer.WithError(err))
-
-	details := hlogger.LogDetails(ctx, "err", humanitecErr.Error(), "status", httpStatusCode)
-	s.logger.Logger.Sugar().Errorw("http error", details...)
-	s.writeAsJSON(ctx, w, httpStatusCode, humanitecErr)
+	w.Write(jsonObj)
 }
 
 // readAsJSON parses request content from JSON
@@ -85,4 +66,24 @@ func readAsJSON(r io.Reader, obj interface{}) error {
 		return errors.New("content stream is not available")
 	}
 	return json.NewDecoder(r).Decode(obj)
+}
+
+// writeError sends the error message as an HTTP Response
+func writeError(w http.ResponseWriter, httpStatusCode int, message string, err error) {
+	if httpStatusCode <= 0 {
+		httpStatusCode = http.StatusInternalServerError
+	}
+
+	var humanitecErr *herrors.HumanitecError
+	if err == nil || !errors.As(err, &humanitecErr) {
+		humanitecErr = herrors.New("RES-001", message, map[string]interface{}{"error": fmt.Sprintf("%v", err)}, err)
+	} else {
+		if humanitecErr.Details == nil {
+			humanitecErr.Details = map[string]interface{}{}
+		}
+		humanitecErr.Details["error"] = fmt.Sprintf("%v", err)
+	}
+
+	log.Printf("(HTTP %d) %v\n", httpStatusCode, humanitecErr)
+	writeAsJSON(w, httpStatusCode, humanitecErr)
 }
