# internal/cookies/types.go
@@ -1,0 +1,6 @@
+package cookies
+
+const (
+	HeaderHumanitecDriverCookie    = "Humanitec-Driver-Cookie"
+	HeaderHumanitecDriverCookieSet = "Set-Humanitec-Driver-Cookie"
+)
