# openapi/spec.json
@@ -6,107 +6,336 @@
   },
   "paths": {
     "/entities/{id}": {
-      "get": {
-        "tags": [
-          "public",
-          "Entity",
-          "id-5aa5c2f2bd3cc24d"
-        ],
-        "summary": "Returns the Entity details.",
+      "put": {
+        "summary": "Create or updates a resource",
+        "description": "The request body contains a declarative definition of the resource. There should only be one instance of a resource for a specific `gurid`.\n",
         "parameters": [
           {
-            "name": "id",
-            "in": "path",
-            "description": "The Entity ID.\n\n",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "$ref": "#/components/parameters/GloballyUniqueResourceId"
+          },
+          {
+            "$ref": "#/components/parameters/HumanitecDriverCookie"
           }
         ],
+        "requestBody": {
+          "description": "The ID of the Organziation to add\n\n",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/InputData"
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
-            "description": "Rhe Entity details.\n\n",
+            "description": "The resource was successfully provisioned, or the resource was already provisioned and in the desired state.\n",
+            "headers": {
+              "Set-Humanitec-Driver-Cookie": {
+                "$ref": "#/components/headers/SetHumanitecDriverCookie"
+              }
+            },
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/EntityResponse"
+                  "$ref": "#/components/schemas/OutputData"
+                }
+              }
+            }
+          },
+          "202": {
+            "description": "The resource is being provisioned or updated. The caller should repeat the request to determine the status.\n",
+            "headers": {
+              "Set-Humanitec-Driver-Cookie": {
+                "$ref": "#/components/headers/SetHumanitecDriverCookie"
+              }
+            },
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AsyncProgressHint"
                 }
               }
             }
           },
           "400": {
-            "description": "Invalid request parameters or payload. E.g. invalid `id` format.\n\n"
+            "description": "A general and unrecoverable error has occurred.\n\n",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
           },
-          "401": {
-            "description": "Required HTTP Authorization header is missing or malformed.\n\n"
+          "409": {
+            "description": "Returned if resource creation/deletion is ongoing and cannot be cancelled AND the current request would result in a different configuration for the resource.\n",
+            "headers": {
+              "Set-Humanitec-Driver-Cookie": {
+                "$ref": "#/components/headers/SetHumanitecDriverCookie"
+              }
+            },
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AsyncProgressHint"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "summary": "Deallocates a resource.",
+        "description": "The resource defined by `gurid` is deallocated. Repeated calls to deallocate an already deallocated resource is explicitly not an error.\n",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/GloballyUniqueResourceId"
           },
-          "500": {
-            "description": "Internal application error.\n\n"
+          {
+            "$ref": "#/components/parameters/HumanitecDriverCookie"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "The resource was successfully deallocated.\n"
+          },
+          "202": {
+            "description": "The resource is being deallocated. The caller should repeat the request to determine the status.\n",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AsyncProgressHint"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "A general and unrecoverable error has occurred.\n\n",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
           }
         }
       }
     }
   },
   "components": {
+    "parameters": {
+      "GloballyUniqueResourceId": {
+        "name": "gurid",
+        "in": "path",
+        "description": "The Globally Unique Resource ID for this resource.\n",
+        "required": true,
+        "schema": {
+          "type": "string"
+        }
+      },
+      "HumanitecDriverCookie": {
+        "name": "Humanitec-Driver-Cookie",
+        "in": "header",
+        "description": "Will be supplied on all subsequent requests with the same `gurid`. The value will the the value of the last `Set-Humanitec-Driver-Cookie` header that was returned. This header will not be included if a previous call had an empty `Set-Humanitec-Driver-Cookie`.\nThe header is automatically reset for a `gurid` once a DELETE on that `gurid` responds with 204\n",
+        "required": false,
+        "schema": {
+          "description": "Any string less than 10kB (10240bytes) in length. To avoid potential encoding issues, it is suggested that the string should be base64 encoded.\n"
+        }
+      }
+    },
+    "headers": {
+      "SetHumanitecDriverCookie": {
+        "description": "Used to set the value of the `Humanitec-Driver-Cookie` in future requests. If the header is empty, `Humanitec-Driver-Cookie` headers will not be sent in future requests.\n",
+        "required": false,
+        "schema": {
+          "description": "Any string less than 10kB (10240bytes) in length. To avoid potential encoding issues, it is suggested that the string should be base64 encoded.\n"
+        }
+      }
+    },
     "schemas": {
-      "EntityRequest": {
-        "description": "An Entity.",
+      "InputData": {
+        "description": "Defines the desired state of the resource being provisioned.",
+        "example": {
+          "type": "postgres",
+          "resource": {
+            "extensions": {
+              "uuid-ossp": null
+            }
+          },
+          "driver": {
+            "values": {
+              "host": "pgsql.databases.example.com",
+              "port": "5432",
+              "name": "defaultdb"
+            },
+            "secrets": {
+              "username": "postgres",
+              "password": "v3ry-53cr3t-p455w0rd"
+            }
+          }
+        },
         "properties": {
-          "id": {
-            "description": "The unique ID for the Entity.",
-            "pattern": "^[a-z0-9][a-z0-9-]+[a-z0-9]$",
-            "type": "string"
+          "type": {
+            "title": "Resource Type",
+            "description": "The type of the resource being provisioned.",
+            "type": "string",
+            "pattern": "^[a-z0-9][a-z0-9-]+[a-z0-9]$"
           },
-          "name": {
-            "description": "The human friendly name for the Entity.",
-            "type": "string"
+          "resource": {
+            "title": "Resource Inputs",
+            "description": "Parameters defined in the resource type that may optionally be used by the driver to specify the resource. May not contain secrets.",
+            "type": "object"
           },
-          "status": {
-            "description": "The Entity status.",
-            "type": "string"
+          "driver": {
+            "title": "Driver Inputs",
+            "description": "Parameters defined in the driver used to configure the driver. May contain secrets.",
+            "type": "object",
+            "properties": {
+              "secrets": {
+                "type": "object"
+              },
+              "values": {
+                "type": "object"
+              }
+            }
           }
         },
         "type": "object"
       },
-      "EntityResponse": {
-        "description": "An Entity.",
+      "OutputData": {
+        "description": "Provides outputs used to access or interact with the resource and any manifests that should be injected.",
+        "example": {
+          "type": "postgres",
+          "resource": {
+            "values": {
+              "host": "pgsql.databases.example.com",
+              "port": "5432",
+              "name": "defaultdb"
+            },
+            "secrets": {
+              "username": "postgres",
+              "password": "v3ry-53cr3t-p455w0rd"
+            }
+          },
+          "manifests": []
+        },
         "properties": {
-          "created_at": {
-            "description": "The timestamp when the Entity was created.",
-            "example": "2020-06-22T09:37:23.523Z",
-            "nullable": true,
-            "pattern": "^[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}(\\.[0-9]{3})?Z$",
-            "title": "Simplified extended ISO format date/time string.",
-            "type": "string"
+          "type": {
+            "title": "Resource Type",
+            "description": "The type of the resource being provisioned.",
+            "type": "string",
+            "pattern": "^[a-z0-9][a-z0-9-]+[a-z0-9]$"
           },
-          "created_by": {
-            "description": "The User ID who has created the Entity.",
-            "type": "string"
+          "resource": {
+            "title": "Resource Outputs",
+            "description": "These outputs are made available through the deployment set as placeholders. May contain secrets.",
+            "properties": {
+              "secrets": {
+                "type": "object",
+                "additionalProperties": {
+                  "type": "string"
+                }
+              },
+              "values": {
+                "type": "object",
+                "additionalProperties": {
+                  "type": "string"
+                }
+              }
+            }
           },
-          "id": {
-            "description": "The unique ID for the Entity.",
-            "pattern": "^[a-z0-9][a-z0-9-]+[a-z0-9]$",
-            "type": "string"
-          },
-          "name": {
-            "description": "The human friendly name for the Entity.",
-            "type": "string"
-          },
+          "manifests": {
+            "title": "Additional Manifests",
+            "description": "A list of additional manifests to inject into the cluster at a particular location.",
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "location": {
+                  "title": "Location",
+                  "type": "string",
+                  "enum": [
+                    "container",
+                    "volume",
+                    "namespace",
+                    "cluster"
+                  ],
+                  "description": "Where the manifest should be injected. Can be one of `container`, `volume`, `namespace` or `cluster`."
+                },
+                "manifest": {
+                  "title": "Manifest",
+                  "description": "A JSON serialized kubernetes manifest",
+                  "type": "object"
+                }
+              }
+            }
+          }
+        },
+        "type": "object"
+      },
+      "AsyncProgressHint": {
+        "description": "Used as a hint by Humanitec to optimize polling for asynchronous driver operations. There is no guarantee that the hint will be used or if it is how it will be used. However, better estimates will in general result in less polling and faster deployments for end users.\n\nAll properties are optional, i.e. an empty object is valid.",
+        "type": "object",
+        "example": {
+          "status": "creating,",
+          "estimated_completion_time": "2021-02-22T09:00:00Z",
+          "timeout_deadline": "2021-02-22T09:10:00Z",
+          "current_time": "2021-02-22T08:55:00Z"
+        },
+        "properties": {
           "status": {
-            "description": "The Entity status.",
+            "type": "string",
+            "enum": [
+              "creating",
+              "updating",
+              "deleting"
+            ]
+          },
+          "estimated_completion_time": {
+            "type": "string",
+            "title": "Estimated Completion Time",
+            "description": "The estimated completion time of the operation. (ISO 8601 datetime string)",
+            "pattern": "^[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}(?:\\.[0-9]+)?(?:Z|[+-][0-9]{2}:?[0-9]{2}?)?$"
+          },
+          "timeout": {
+            "type": "string",
+            "title": "Timeout",
+            "description": "The time after which the operation can be assumed to have timed out. (ISO 8601 datetime string)",
+            "pattern": "^[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}(?:\\.[0-9]+)?(?:Z|[+-][0-9]{2}:?[0-9]{2}?)?$"
+          },
+          "current_time": {
+            "type": "string",
+            "title": "Current Time",
+            "description": "The current time as measured by the driver. Intended to handle clock skew. (ISO 8601 datetime string)",
+            "pattern": "^[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}(?:\\.[0-9]+)?(?:Z|[+-][0-9]{2}:?[0-9]{2}?)?$"
+          }
+        }
+      },
+      "Error": {
+        "description": "Describes an error that the driver encountered which means it cannot complete its request.",
+        "example": {
+          "error": "RES-101",
+          "message": "Driver input \"Host\" is not a string. Got integer."
+        },
+        "properties": {
+          "error": {
+            "title": "Error Code",
+            "description": "A Humanitec error code. For drivers, the error code is always prefixed with `RES-1`",
+            "type": "string",
+            "pattern": "$RES-1[0-9][0-9]^"
+          },
+          "message": {
+            "title": "Message",
+            "description": "A human readable error message giving further context on the error.",
             "type": "string"
           }
         },
-        "required": [
-          "id",
-          "name",
-          "status",
-          "created_at",
-          "created_by"
-        ],
         "type": "object"
       }
     }
+
   }
 }
